[gd_scene load_steps=15 format=3 uid="uid://bqr16sbrw00w8"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ejqxc"]
[ext_resource type="PackedScene" uid="uid://dy0r0a3q22dp" path="res://Scenes/spherehead.tscn" id="2_hgupt"]
[ext_resource type="Shader" path="res://Shaders/four_level_posterisation.gdshader" id="3_lhyud"]
[ext_resource type="Script" path="res://Scripts/ContextComponent.gd" id="4_dssms"]
[ext_resource type="Texture2D" uid="uid://bcy31im7gctkv" path="res://Textures/InteractionBox.tres" id="5_kvyja"]
[ext_resource type="Shader" path="res://Shaders/vignette.gdshader" id="6_eqtyy"]
[ext_resource type="AudioStream" uid="uid://dg3r36w5j5rsq" path="res://Audio/step.mp3" id="7_bthpv"]
[ext_resource type="Shape3D" uid="uid://cake804vhdwun" path="res://Models/Standing_Hitbox.tres" id="8_crbcy"]
[ext_resource type="Shape3D" uid="uid://dhl4q73ejmlil" path="res://Models/Crouching_Hitbox.tres" id="9_gtr0c"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_auct7"]
dof_blur_far_enabled = true
dof_blur_far_distance = 7.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ccik"]
render_priority = 0
shader = ExtResource("3_lhyud")
shader_parameter/level1 = Color(0.100009, 0.104951, 0.0560403, 1)
shader_parameter/level2 = Color(0, 0, 0, 1)
shader_parameter/level3 = Color(0.151433, 0.14511, 0.112785, 1)
shader_parameter/level4 = Color(1, 1, 1, 1)
shader_parameter/threshold1 = 0.011
shader_parameter/threshold2 = 0.007
shader_parameter/threshold3 = 0.02

[sub_resource type="PlaneMesh" id="PlaneMesh_8w0ah"]
material = SubResource("ShaderMaterial_4ccik")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u74k3"]
shader = ExtResource("6_eqtyy")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_size = 0.01
shader_parameter/alpha_threshold = 0.5
shader_parameter/samples = 4.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_iug12"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ejqxc")

[node name="spherehead" parent="." instance=ExtResource("2_hgupt")]
transform = Transform3D(-0.363, 0, -3.17345e-08, 0, 0.363, 0, 3.17345e-08, 0, -0.363, 0, 0, 0)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, -1.42109e-14, 0, 1, 0, 1.42109e-14, 0, 1, 3.55271e-15, 1.8, -0.271645)

[node name="Eyes" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.3701e-16, -0.166278, -0.0307518)

[node name="PlayerCamera" type="Camera3D" parent="Head/Eyes"]
attributes = SubResource("CameraAttributesPractical_auct7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head/Eyes/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, -4.37113e-08, -1, 0, 0.999999, -4.37114e-08, 0.1, 0, -0.1)
mesh = SubResource("PlaneMesh_8w0ah")

[node name="UIComponent" type="Control" parent="Head/Eyes/PlayerCamera"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContextComponent" type="CenterContainer" parent="Head/Eyes/PlayerCamera/UIComponent" node_paths=PackedStringArray("icon", "context")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 48.94
offset_bottom = 48.94
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_dssms")
icon = NodePath("TextureRect")
context = NodePath("Label")
default_icon = ExtResource("5_kvyja")

[node name="TextureRect" type="TextureRect" parent="Head/Eyes/PlayerCamera/UIComponent/ContextComponent"]
custom_minimum_size = Vector2(0, 46.6)
layout_mode = 2
texture = ExtResource("5_kvyja")

[node name="Label" type="Label" parent="Head/Eyes/PlayerCamera/UIComponent/ContextComponent"]
layout_mode = 2
text = "E"

[node name="Vignette" type="CanvasLayer" parent="Head/Eyes/PlayerCamera/UIComponent"]
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="Head/Eyes/PlayerCamera/UIComponent/Vignette"]
material = SubResource("ShaderMaterial_u74k3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Feet" type="AudioStreamPlayer" parent="Head"]
stream = ExtResource("7_bthpv")
volume_db = -10.0

[node name="Standing_Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = ExtResource("8_crbcy")

[node name="Crouching_Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = ExtResource("9_gtr0c")
disabled = true

[node name="Crouch_RayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_iug12")
